--- a/out.html
+++ b/out.html
@@ -56,7 +56,7 @@ show.innerHTML = t;
 
 
 
-  <div style="width:100%;min-height:25px;line-height:25px;font-size:14px;color:#333;text-align:center;"><img src="https://fxxzz.ml/api/v3/file/get/22/B88F7638C25F4416ACDB07C7962BE096.jpg?sign=i_UGIHUAJYm8MnoYLAriE_bgI9M6R8t_ckw-djPcR_4%3D%3A0" style="width:350px;border:0px;"></div><div style="width:100%;height:7px;BACKGROUND-IMAGE: url(/images/split5.png)"></div><div style="width:100%;min-height:25px;line-height:25px;font-size:18px;color:#00c;font-weight:500;font-family:黑体;">　<span style="color:#00a">医学院　樊灏东</span><br>　通行信息：主校区大门东门.出口<br>　出入身份：请假被批准的学生</span></div><div style="width:100%;height:7px;BACKGROUND-IMAGE: url(/images/split5.png)"></div><div style="width:100%;min-height:18px;line-height:18px;font-size:12px;color:#666;text-align:center">郑州大学疫情防控领导小组、保卫处、信息化办公室</div>  
+  <div style="width:100%;min-height:25px;line-height:25px;font-size:14px;color:#333;text-align:center;"><img src="https://fxxzz.ml/api/v3/file/get/22/B88F7638C25F4416ACDB07C7962BE096.jpg?sign=i_UGIHUAJYm8MnoYLAriE_bgI9M6R8t_ckw-djPcR_4%3D%3A0" style="width:350px;border:0px;"></div><div style="width:100%;height:7px;BACKGROUND-IMAGE: url(/images/split5.png)"></div><div style="width:100%;min-height:25px;line-height:25px;font-size:18px;color:#00c;font-weight:500;font-family:黑体;">　<span style="color:#00a">医学院　樊灏东</span><br>　通行信息：主校区大门东门.入口<br>　出入身份：请假被批准的学生 </span></div><div style="width:100%;height:7px;BACKGROUND-IMAGE: url(/images/split5.png)"></div><div style="width:100%;min-height:18px;line-height:18px;font-size:12px;color:#666;text-align:center">郑州大学疫情防控领导小组、保卫处、信息化办公室</div>  
   
 </div>
 
