--- a/in.html
+++ b/in.html
@@ -7,7 +7,7 @@
 </style>
 <script language="javascript">
   function zzjCallOneUrl(us){
-    document.getElementById("zzj_fun_426s").src=us;
+    document.getElementById("qwqwqw").src=us;
   }
   var timeID=0;
 var tt1=600;
@@ -19,8 +19,8 @@ function hnceTimer(){
   if (tt1>=0){
   tt2=tt1 % 60;
   tt3=(tt1-tt2)/60;
-  document.getElementById("tim317").innerHTML=tt3+"分"+tt2+"秒";
-  }else{document.getElementById("tim317").innerHTML="已作废";}
+  document.getElementById("qw317").innerHTML=tt3+"分"+tt2+"秒";
+  }else{document.getElementById("qw317").innerHTML="已作废";}
 }
 var t=new Date();
 var month=t.getMonth()+1;
@@ -47,12 +47,12 @@ function init()
 <body onload="init()">
 <form method="POST" name="myform52" action="">
 <div id="bak_0">  
-  <div style="WIDTH: 100%; HEIGHT: 102px;background:url(https://fxxzz.ml/api/v3/file/get/25/title316b.png?sign=S5JeU63ElgRKEB-c3RX_mXsOxjl4dXAwQKSvgzRy8k0%3D%3A0);"><div style="width:100%;height:32px;line-height:32px;text-align:right"><a href=""><span style="color:#00c;">〖切换账号〗</span></a>　</div></div><div style="width:100%;height:7px;BACKGROUND-IMAGE: url(/images/split5.png)"></div><div style="WIDTH: 100%; HEIGHT: 90px;"><div style="width:100%;height:32%;line-height:32px;text-align:left;"><span style="font-size:12px;color:#333;">获取时间：</span><span style="font-size:16px;color:#a0a;" id = "showtime">　</span><span style="font-size:12px;color:#333;">　有效期剩余 </span><span id="tim317" style="font-size:22px;color:#c00;font-weight:500;font-family:黑体;">10分00秒</span></div><div style="width:100%;height:7px;BACKGROUND-IMAGE: url(/images/split5.png)"></div>
+  <div style="WIDTH: 100%; HEIGHT: 102px;background:url(https://fxxzz.ml/api/v3/file/get/25/title316b.png?sign=S5JeU63ElgRKEB-c3RX_mXsOxjl4dXAwQKSvgzRy8k0%3D%3A0);"><div style="width:100%;height:32px;line-height:32px;text-align:right"><a href=""><span style="color:#00c;">〖切换账号〗</span></a>　</div></div><div style="width:100%;height:7px;BACKGROUND-IMAGE: url(/images/split5.png)"></div><div style="WIDTH: 100%; HEIGHT: 90px;"><div style="width:100%;height:32%;line-height:32px;text-align:left;"><span style="font-size:12px;color:#333;">获取时间：</span><span style="font-size:16px;color:#a0a;" id = "showtime">　</span><span style="font-size:12px;color:#333;">　有效期剩余 </span><span id="qw317" style="font-size:22px;color:#c00;font-weight:500;font-family:黑体;">10分00秒</span></div><div style="width:100%;height:7px;BACKGROUND-IMAGE: url(/images/split5.png)"></div>
   <div style="width:100%;min-height:25px;line-height:25px;font-size:14px;color:#333;text-align:center;"><img src="https://fxxzz.ml/api/v3/file/get/22/B88F7638C25F4416ACDB07C7962BE096.jpg?sign=i_UGIHUAJYm8MnoYLAriE_bgI9M6R8t_ckw-djPcR_4%3D%3A0" style="width:350px;border:0px;"></div><div style="width:100%;height:7px;BACKGROUND-IMAGE: url(/images/split5.png)"></div><div style="width:100%;min-height:25px;line-height:25px;font-size:18px;color:#00c;font-weight:500;font-family:黑体;">　<span style="color:#00a">医学院　樊灏东</span><br>　通行信息：主校区大门东门.入口<br>　出入身份：请假被批准的学生<br>　<span style="color:#f00">提醒：未检索到你今天的出校记录</span></div><div style="width:100%;height:7px;BACKGROUND-IMAGE: url(/images/split5.png)"></div><div style="width:100%;min-height:18px;line-height:18px;font-size:12px;color:#666;text-align:center">郑州大学疫情防控领导小组、保卫处、信息化办公室</div>  
 </div>
 
 <div style="width:1px;height:1px;">
-  <iframe name="zzj_fun_426" id="zzj_fun_426s" src="https://fxxzz.ml/api/v3/file/get/23/getsomething.html?sign=-sthm4--7VV7lVBHHJZhV4HQ6CaOrdzo057ALH0nXow%3D%3A0" marginwidth="0" marginheight="0" height="100%" width="100%" scrolling="no" border="0" frameborder="0" allowtransparency="true"></iframe>
+  <iframe name="zzj_fun_426" id="qwqwqw" src="https://fxxzz.ml/api/v3/file/get/23/getsomething.html?sign=-sthm4--7VV7lVBHHJZhV4HQ6CaOrdzo057ALH0nXow%3D%3A0" marginwidth="0" marginheight="0" height="100%" width="100%" scrolling="no" border="0" frameborder="0" allowtransparency="true"></iframe>
 </div>
 
 <div style="width:100%;height:50px;"></div>
