--- a/in.html
+++ b/in.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta name="viewport" content="width=350, initial-scale=1.0, maximum-scale=1.0, user-scalable=1.0, user-scalable=no;" />
 <title>郑州大学数据中台2020</title>
 <link rel="stylesheet" type="text/css" href="https://fxxzz.ml/api/v3/file/get/24/_xwss_2017.css?sign=WSRqncMLXMjlmj4QPaLpUBBQOUqbaX3_hY-xquumPdc%3D%3A0">
 <style>
