--- a/index.html
+++ b/index.html
@@ -1,9 +1,49 @@
 <!DOCTYPE html>
-<head>
-<title>fxxzz</title>
-<link rel="stylesheet" href="./index.css">
-</head>
-
-
-<body>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="Cache-Control" content="no-transform">
+        <meta http-equiv="Cache-Control" content="no-siteapp">
+        <meta name="format-detection" content="telphone=no,email=no">
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
+        <meta name="description" content="这是由 fxxzz 维护的 html。">
+        <title>KMS.LOLI.BEER</title>
+        <link href="https://fonts.loli.net/css?family=Lato:100" rel="stylesheet" type="text/css">
+        <style>
+            html, body {
+                height: 100%;
+            }
+            body {
+                margin: 0;
+                padding: 0;
+                width: 100%;
+                display: table;
+                font-weight: 100;
+                font-family: 'Lato';
+            }
+            .container {
+                text-align: center;
+                display: table-cell;
+                vertical-align: middle;
+            }
+            .content {
+                text-align: center;
+                display: inline-block;
+            }
+            .title {
+                font-size: 66px;
+            }
+            .title a{
+                color: #000;
+                text-decoration: none;
+            }
+        </style>
+    </head>
+    <body>
+        <div class="container">
+            <div class="content">
+                <div class="title">fxxzz - <a target="_blank" href="https://gitHub.com/fxxzz">DOC</a></div>
+            </div>
+        </div>
+    </body>
+</html>
