--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="format-detection" content="telphone=no,email=no">
         <link rel="icon" type="image/x-icon" href="favicon.ico">
         <meta name="description" content="这是由 fxxzz 维护的 html。">
-        <title>KMS.LOLI.BEER</title>
+        <title>FXXZZ</title>
         <link href="https://fonts.loli.net/css?family=Lato:100" rel="stylesheet" type="text/css">
         <style>
             html, body {
