--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="icon" type="image/x-icon" href="favicon.ico">
         <meta name="description" content="这是由 fxxzz 维护的 html。">
         <title>FXXZZ</title>
-        <link href="https://fonts.loli.net/css?family=Lato:100" rel="stylesheet" type="text/css">
+        <link href="https://fxxzz.github.io/index.css" rel="stylesheet" type="text/css">
         <style>
             html, body {
                 height: 100%;
