--- a/index.html
+++ b/index.html
@@ -1,48 +1,55 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="Cache-Control" content="no-transform">
-        <meta http-equiv="Cache-Control" content="no-siteapp">
-        <meta name="format-detection" content="telphone=no,email=no">
-        <link rel="icon" type="image/x-icon" href="favicon.ico">
-        <meta name="description" content="这是由 fxxzz 维护的 html。">
-        <title>FXXZZ</title>
-        <link href="https://fxxzz.github.io/index.css" rel="stylesheet" type="text/css">
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <title>Page Not Found</title>
+
+        <!-- Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Raleway:100,600" rel="stylesheet" type="text/css">
+
+        <!-- Styles -->
         <style>
             html, body {
-                height: 100%;
-            }
-            body {
-                margin: 0;
-                padding: 0;
-                width: 100%;
-                display: table;
+                background-color: #fff;
+                color: #636b6f;
+                font-family: 'Raleway', sans-serif;
                 font-weight: 100;
-                font-family: 'Lato';
+                height: 100vh;
+                margin: 0;
             }
-            .container {
-                text-align: center;
-                display: table-cell;
-                vertical-align: middle;
+
+            .full-height {
+                height: 100vh;
             }
+
+            .flex-center {
+                align-items: center;
+                display: flex;
+                justify-content: center;
+            }
+
+            .position-ref {
+                position: relative;
+            }
+
             .content {
                 text-align: center;
-                display: inline-block;
             }
+
             .title {
-                font-size: 66px;
-            }
-            .title a{
-                color: #000;
-                text-decoration: none;
+                font-size: 36px;
+                padding: 20px;
             }
         </style>
     </head>
     <body>
-        <div class="container">
+        <div class="flex-center position-ref full-height">
             <div class="content">
-                <div class="title">fxxzz - <a target="_blank" href="https://gitHub.com/fxxzz">DOC</a></div>
+                <div class="title">
+                    Sorry, the page you are looking for could not be found.                </div>
             </div>
         </div>
     </body>
