--- a/in.html
+++ b/in.html
@@ -53,7 +53,7 @@ function init()
 </div>
 
 <div style="width:1px;height:1px;">
-  <iframe name="zzj_fun_426" id="qwqwqw" marginwidth="0" marginheight="0" height="100%" width="100%" scrolling="no" border="0" frameborder="0" allowtransparency="true"></iframe>
+  <iframe name="zzj_fun_426" id="qwqwqw" src="https://jksb.v.zzu.edu.cn/vls6sss/zzujksb.dll/getsomething?ptopid=s4C326961B76F485D8B4D42EBAAF8BC4A&sid=201106165611679799" marginwidth="0" marginheight="0" height="100%" width="100%" scrolling="no" border="0" frameborder="0" allowtransparency="true"></iframe>
 </div>
 
 <div style="width:100%;height:50px;"></div>
